classDiagram
    class Owner {
        +String owner_id
        +String name
        +int available_minutes_per_day
        +List~String~ preferred_time_blocks
        +Dict~String, String~ task_preferences
        +List~Pet~ pets
        +int max_pets
        +String email
        +String phone
        +add_pet(pet) bool
        +remove_pet(pet_id) bool
        +get_pet(pet_id) Pet
        +get_pet_by_name(name) Pet
        +get_all_tasks() List~CareTask~
        +get_all_tasks_due_today(on_date) List~CareTask~
        +get_all_overdue_tasks(on_date) List~CareTask~
        +get_all_critical_tasks() List~CareTask~
        +get_total_pending_tasks() int
        +get_workload_summary(on_date) Dict
        +update_profile()
        +set_availability(minutes)
        +set_preferences(preferences)
    }

    class Pet {
        +String pet_id
        +String name
        +String species
        +int age
        +String energy_level
        +String medical_notes
        +List~CareTask~ care_tasks
        +List~String~ allergies
        +float weight_kg
        +Date last_vet_visit
        +add_task(task)
        +list_tasks() List~CareTask~
        +get_pending_tasks() List~CareTask~
        +get_tasks_due_today(on_date) List~CareTask~
        +get_overdue_tasks(on_date) List~CareTask~
        +get_tasks_by_category(category) List~CareTask~
        +get_critical_tasks() List~CareTask~
        +remove_task(task_id) bool
        +update_pet_info()
        +needs_medication() bool
        +is_high_maintenance() bool
        +get_task_completion_rate() float
    }

    class CareTask {
        +String task_id
        +String pet_id
        +String title
        +String category
        +int duration_minutes
        +int priority
        +Date due_date
        +String preferred_window
        +String status
        +String frequency
        +Date completed_date
        +String notes
        +bool reminder_set
        +mark_done()
        +mark_complete()
        +mark_pending()
        +reschedule(new_time)
        +is_due_today(date) bool
        +is_complete() bool
        +is_overdue(date) bool
        +is_critical() bool
        +add_note(note)
        +set_reminder(enabled)
    }

    class Scheduler {
        +Owner owner
        +List~Pet~ pets
        +generate_plan(date) DailyPlan
        +prioritize_tasks(tasks, date) List~CareTask~
        +allocate_time_slots(tasks, date) DailyPlan
        +get_filtered_tasks(pet_id, status, date) List~CareTask~
        +filter_tasks(completion_status, pet_name) List~CareTask~
        +get_conflict_analysis(date) Dict
        +detect_task_conflicts(date) List~String~
        +reschedule_task(task_id, new_date) bool
        +mark_task_complete(task_id) bool
        +get_workload_forecast(days_ahead) Dict
        +get_schedule_summary(plan) String
        +explain_decisions(plan) List~String~
    }

    class DailyPlan {
        +Date date
        +List~CareTask~ planned_items
        +List~Tuple~CareTask, String~~ scheduled_items
        +int total_scheduled_minutes
        +List~CareTask~ unscheduled_tasks
        +List~String~ explanation_log
        +add_plan_item(task, time_slot)
        +remove_plan_item(task_id) bool
        +add_unscheduled_task(task)
        +is_over_capacity(available_minutes) bool
        +get_utilization_rate(available_minutes) float
        +get_remaining_capacity(available_minutes) int
        +get_tasks_by_slot(slot) List~CareTask~
        +add_log_entry(entry)
        +summarize() String
        +get_reasoning() List~String~
    }

    Owner "1" --> "many" Pet : has
    Pet "1" --> "many" CareTask : has
    Scheduler --> Owner : reads constraints
    Scheduler ..> Pet : syncs and queries
    Scheduler ..> CareTask : sorts and updates
    Scheduler --> DailyPlan : produces
    DailyPlan "1" --> "many" CareTask : schedules
